# fit_galgo_frontend_c-

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  TESTS_TODO.org  compile_commands.json  launch.json
src/: main.cpp
src/api/: fitgalgo.cpp  fitgalgo.h
src/config/: Context.cpp  Context.h
src/core/: api.cpp  api.h  api.old.cpp  api.old.h  date.cpp  date.h  definitions.h  monitor.cpp  monitor.h  stats.cpp  stats.h
src/net/: HttpClient.cpp  HttpClient.h  HttpClientException.cpp  HttpClientException.h
src/ui/: #CalendarPrinter.cpp#  calendar.cpp  calendar.h  colors.cpp  colors.h  printer.h  repr.cpp  repr.h  shell.cpp  shell.h  tabular.h
src/utils/: date.h  string.h
test/: test_core_date.cpp  test_monitor.cpp
